// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test CardController should render CardController with active style 1`] = `
<div
  class="styled__Card-grAINz jLQvDg heading4 align-center"
>
  เมื่อวานนี้
</div>
`;

exports[`Test CardController should render CardController without active style 1`] = `
<div
  class="styled__Card-grAINz idryPy heading4 align-center"
>
  เมื่อวานนี้
</div>
`;
